# virtual-power-meter

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  WINDOWS_GUIDE.md  make.bat  make.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run_web_ui.bat  run_web_ui.ps1  virtual_pm_CLI.py  virtual_pm_CLI_refactored.py  web_ui.py
config/: register_table_PM21XX.json  register_table_PM21XX_enhanced.json  register_table_generic.json
src/config/: cli_parser.py  settings.py
src/data_generation/: generators.py  meter_generator.py  register_loader.py
src/modbus/: server.py
tests/: test_generators.py  test_integration.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: base.html  config.html  dashboard.html  monitor.html  registers.html
